syntax = "proto3";

option go_package = "github.com/hjcian/grpc-web-istio-practice/go-pb";

service EmojiService {
  rpc Emojize (EmojizeRequest) returns (EmojizeReply);
}

message EmojizeRequest {
  string text = 1;
}

message EmojizeReply {
  string emojized_text = 1;
}
